name:           bb
version:        0.0.2.1
category:       Finance
author:         Miezhiko
license:        GPLv3
build-type:     Simple
cabal-version:  2.0

executable bb
  main-is: Main.hs
  other-modules:
    Paths_bb
    Version
    Types
    Utils
    Ticker
    Config
    Bricks
    Auth
    Futures
    Conky
    ConkyGen
  hs-source-dirs:
    src
  default-extensions:
    CPP
    LambdaCase
    MultiWayIf
    UnicodeSyntax
    DataKinds
    OverloadedLabels
    OverloadedStrings
    ViewPatterns
    DeriveGeneric
  build-depends:
      base
    , base-unicode-symbols
    , containers
    , aeson
    , bytestring
    , yaml
    , filepath
    , directory
    , websockets
    , wuss
    , mtl
    , network
    , text
    , brick
    , vty
    , vty-crossplatform
    , lens
    , time
    , process
  default-language: Haskell2010
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N
